components/gatekeeper-constraints/explicit-virtualservice-hosts/samples/wildcard/namespace-my-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-ns
  labels:
    istio.io/rev: default
