components/gatekeeper-constraints/explicit-virtualservice-hosts/suite.yaml
apiVersion: test.gatekeeper.sh/v1alpha1
kind: Suite
tests:
- name: Explicit VirtualService Hosts
  template: template.yaml
  constraint: samples/wildcard/constraint.yaml
  cases:
  - name: Valid hosts in mesh namespace
    object: samples/wildcard/virtualservice-allow.yaml
    inventory:
    - samples/wildcard/namespace-my-ns.yaml
    assertions:
    - violations: no
  - name: Invalid wildcard (non-explicit) host in mesh namespace
    object: samples/wildcard/virtualservice-prohibit.yaml
    inventory:
    - samples/wildcard/namespace-my-ns.yaml
    assertions:
    - violations: yes
  - name: Invalid (#2) wildcard (non-explicit) host in mesh namespace
    object: samples/wildcard/virtualservice-prohibit2.yaml
    inventory:
    - samples/wildcard/namespace-my-ns.yaml
    assertions:
    - violations: yes
  - name: Valid - non mesh namespace
    object: samples/wildcard/virtualservice-prohibit.yaml
    inventory:
    - samples/wildcard/namespace-my-ns-negative-match.yaml
    assertions:
    - violations: no
